integration with .Net Core logging infrastructure

--- a/sample/SampleAspNetCoreApp/appsettings.json
+++ b/sample/SampleAspNetCoreApp/appsettings.json
@@ -1,12 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Warning",
+      "Elastic.Apm": "Error"
     }
   },
   "AllowedHosts": "*",
   "ElasticApm": {
-    "LogLevel": "Error",
     "ServerUrls": "http://localhost:8200",
     "TransactionSampleRate": 1.0
   }
