Error monitoring and additional changes
This commit includes the following :
1. Errors monitoring now supports the 'captureBody' feature + tests.
2. Values Controller is removed, the Post methods for testing have been moved to the Home Controller.
3. Refactoring : Functionality of the request body retrieval has been moved to an extension method class ('RequestExtensions.cs'). 
4. Added more tests.
5. Small changes to captureBody default values in tests.

--- a/sample/SampleAspNetCoreApp/appsettings.json
+++ b/sample/SampleAspNetCoreApp/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ElasticApm": {
     "ServerUrls": "http://localhost:8200",
-    "TransactionSampleRate": 1.0
+    "TransactionSampleRate": 1.0,
+    "CaptureBody": "all"
   }
 }
