--- a/sample/WebApiSample/appsettings.json
+++ b/sample/WebApiSample/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ElasticApm": {
-    "ServerUrls": "http://localhost:8200"
+    "ServerUrls": "http://localhost:8200",
+    "CaptureBody": "all"
   }
 }
