--- a/.editorconfig
+++ b/.editorconfig
@@ -129,3 +129,7 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.{sh,bat,ps1}]
+trim_trailing_whitespace=true
+insert_final_newline=true
