Bug fixing & refactoring
1. Created a new Exception filter in the Elastic.Apm.AspNetCore project to be used instead of the Elastic.Apm one (to enable request body capturing).
2. Added the configuration option 'CaptureBodyContentTypes' that defines which request content types will be matched with the requests. The default value is common text content types : 
application/x-www-form-urlencoded*
text/*
application/json*
application/xml*
3. Some refactoring and code-arranging.
4. Added some tests

--- a/sample/SampleAspNetCoreApp/appsettings.json
+++ b/sample/SampleAspNetCoreApp/appsettings.json
@@ -9,6 +9,7 @@
   "ElasticApm": {
     "ServerUrls": "http://localhost:8200",
     "TransactionSampleRate": 1.0,
-    "CaptureBody": "all"
+    "CaptureBody": "all",
+    "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
   }
 }
