--- a/sample/WebApiSample/appsettings.json
+++ b/sample/WebApiSample/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ElasticApm": {
     "ServerUrls": "http://localhost:8200",
-    "CaptureBody": "all"
+    "CaptureBody": "all",
+    "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
   }
 }
