Capture request body aspnet core (#402)
* Capture request body in asp.net core

initial feature commit - 
Added config values + behavior in the Apm middle-ware class.
Errors body extraction still pending.

* Added the body default value

* Minor fixes

Had to make minor changes to the code due to some name changes.

* Check if body > 2kb and truncate accordingly

* Error monitoring and additional changes

This commit includes the following :
1. Errors monitoring now supports the 'captureBody' feature + tests.
2. Values Controller is removed, the Post methods for testing have been moved to the Home Controller.
3. Refactoring : Functionality of the request body retrieval has been moved to an extension method class ('RequestExtensions.cs'). 
4. Added more tests.
5. Small changes to captureBody default values in tests.

* Added error logging in ApmMiddle   

1. Added request body capturing in the ApmMiddle InvokeAsync method.
2. Added a test to verify this scenario.
3. Refactored some of the code that determines if the agent should capture the request body for better readability and maintainability.

* Bug fixing & refactoring

1. Created a new Exception filter in the Elastic.Apm.AspNetCore project to be used instead of the Elastic.Apm one (to enable request body capturing).
2. Added the configuration option 'CaptureBodyContentTypes' that defines which request content types will be matched with the requests. The default value is common text content types : 
application/x-www-form-urlencoded*
text/*
application/json*
application/xml*
3. Some refactoring and code-arranging.
4. Added some tests

* Added a call to 'EnableRewind' when reading the request body

1. Added a reference to 'Microsoft.AspNetcore.Http' ver 2.0.0
2. Added a call to 'EnableRewind' when reading the request body and reset the body stream position to 0 after that in case subsequent readings of the body.
3. Removed a commented line in AspNetCoreMiddlewareTests.c

--- a/sample/SampleAspNetCoreApp/appsettings.json
+++ b/sample/SampleAspNetCoreApp/appsettings.json
@@ -8,6 +8,8 @@
   "AllowedHosts": "*",
   "ElasticApm": {
     "ServerUrls": "http://localhost:8200",
-    "TransactionSampleRate": 1.0
+    "TransactionSampleRate": 1.0,
+    "CaptureBody": "all",
+    "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
   }
 }
