--- a/sample/WebApiSample/appsettings.json
+++ b/sample/WebApiSample/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ElasticApm": {
-    "ServerUrls": "http://localhost:8200"
+    "ServerUrls": "http://localhost:8200",
+    "CaptureBody": "all",
+    "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
   }
 }
