--- a/sample/AspNetFullFrameworkSampleApp/packages.config
+++ b/sample/AspNetFullFrameworkSampleApp/packages.config
@@ -23,7 +23,11 @@
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="NLog" version="4.6.5" targetFramework="net461" />
   <package id="popper.js" version="1.14.3" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Threading.Tasks.Dataflow" version="4.10.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
