--- a/sample/AspNetFullFrameworkSampleApp/packages.config
+++ b/sample/AspNetFullFrameworkSampleApp/packages.config
@@ -16,6 +16,8 @@
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.5" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
+  <package id="MSBuild.Microsoft.VisualStudio.Web.targets" version="14.0.0.3" targetFramework="net461" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies.net461" version="1.0.0-preview.2" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
