--- a/src/Elastic.Apm.AspNetFullFramework/Elastic.Apm.AspNetFullFramework.csproj
+++ b/src/Elastic.Apm.AspNetFullFramework/Elastic.Apm.AspNetFullFramework.csproj
@@ -3,13 +3,13 @@
     <TargetFramework>net461</TargetFramework>
     <AssemblyName>Elastic.Apm.AspNetFullFramework</AssemblyName>
     <RootNamespace>Elastic.Apm.AspNetFullFramework</RootNamespace>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
-    <InformationalVersion>1.0.0-beta1</InformationalVersion>
-    <FileVersion>1.0.0</FileVersion>
+    <AssemblyVersion>1.1.2</AssemblyVersion>
+    <InformationalVersion>1.1.2</InformationalVersion>
+    <FileVersion>1.1.2</FileVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\build\elasticapm.snk</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
-    <PackageVersion>1.0.0-beta1</PackageVersion>
+    <PackageVersion>1.1.2</PackageVersion>
     
     <PackageId>Elastic.Apm.AspNetFullFramework</PackageId>
     <Copyright>2019 Elasticsearch BV</Copyright>
