--- a/sample/AspNetFullFrameworkSampleApp/packages.config
+++ b/sample/AspNetFullFrameworkSampleApp/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="4.3.1" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.9.1" targetFramework="net461" />
@@ -25,6 +26,11 @@
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="NLog" version="4.6.5" targetFramework="net461" />
   <package id="popper.js" version="1.14.3" targetFramework="net461" />
+  <package id="SQLite.CodeFirst" version="1.5.2.28" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.111.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.111.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.111.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.111.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net461" />
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
